--- a/index.html
+++ b/index.html
@@ -21,21 +21,40 @@
     <div class="tabuleiro">
 
         <div>
-            <div id="0" class="peca"></div>
-            <div id="1" class="peca"></div>
-            <div id="2" class="peca"></div>
+
+            <div id="0" class="quadrado">
+
+                
+
+            </div>
+
+            <div id="1" class="quadrado">
+
+           
+
+            </div>
+
+            <div id="2" class="quadrado"></div>
+
         </div>
 
         <div>
-            <div id="3" class="peca"></div>
-            <div id="4" class="peca"></div>
-            <div id="5" class="peca"></div>
+
+            <div id="3" class="quadrado"></div>
+
+            <div id="4" class="quadrado"></div>
+
+            <div id="5" class="quadrado"></div>
+
         </div>
 
         <div>
-            <div id="6" class="peca"></div>
-            <div id="7" class="peca"></div>
-            <div id="8" class="peca"></div>
+            <div id="6" class="quadrado"></div>
+
+            <div id="7" class="quadrado"></div>
+
+            <div id="8" class="quadrado"></div>
+
         </div>
 
 
@@ -43,6 +62,9 @@
 
 
 
+
+<script src="./game.js"></script>
+<script src="./interface.js"></script>
 
 
 </body>
