--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
         <div>
 
-            <div id="0" class="square"><div class="o"></div></div>
+            <div id="0" class="square"><div class=""></div></div>
 
-            <div id="1" class="square"><div class="x"></div></div>
+            <div id="1" class="square"><div class=""></div></div>
 
             <div id="2" class="square"><div></div>
             </div>
@@ -47,7 +47,8 @@
 
 
 
-    <script src=""></script>
+    <script src="./game.js"></script>
+    <script src="./interface.js"></script>
 </body>
 
 </html>
